--- a/05-webservers/package.json
+++ b/05-webservers/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "04-clima-app",
+  "name": "05-webservers",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.27.2",
-    "colors": "^1.4.0",
     "dotenv": "^16.0.1",
-    "inquirer": "^9.0.2"
+    "express": "^4.18.1",
+    "hbs": "^4.2.0",
+    "nodemon": "^2.0.19"
   }
 }
